--- a/src/index.css
+++ b/src/index.css
@@ -56,9 +56,10 @@ h1 {
 
 section {
     margin-top: 8rem;
+    height: 100vh;
 }
 
-section > h2, section > h5 {
+section > h1, section > h4 {
     text-align: center;
     color: var(--color-light);
 }
